# ragmind

./: .gitignore  README.md  claude.md  pyproject.toml
kb/: __init__.py  chunker.py  cli.py  daemon.py  embedder.py  generator.py  retriever.py  scanner.py  store.py
kb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mocks/: cron-jobs.md  disk-management.md  log-management.md  network-troubleshooting.md  package-management.md  process-management.md  ssh-key-management.md  systemd-services.md  ufw-firewall.md  user-group-management.md
tests/: conftest.py  mocks.py  test_chunker.py  test_cli.py  test_embedder.py  test_generator.py  test_retriever.py  test_scanner.py  test_store.py
